@@ -553,4 +553,5 @@
 	* Added a block to character (BCH) driver.  This is kind of the reverse of the loop
 	  device; it allows you access a block device like a character device.
 	* Added strcasecmp() and strncasecmp()
-	* NSH: Added 'dd' command
+	* NSH: Added the 'dd' command
+	* NSH: Added the 'losetup' command
